# foosdk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  build.proj
.github/workflows/: build.yml
cmake/: FileLists.cmake  FindWtl.cmake  SourcesMacOs.cmake  SourcesWindows.cmake
scripts/: dump-pbxproj.sh  dump-vcxproj.sh  update-lists.sh
sdk/: sdk-license.txt  sdk-readme.html
sdk/foobar2000/ATLHelpers/: CButtonLite.h  CDialogResizeHelper.h  CEditWithButtons.h  WTL-PP.h  foobar2000_ATL_helpers.vcxproj  ui_element_helpers.cpp  ui_element_helpers.h
sdk/foobar2000/SDK/: abort_callback.cpp  abort_callback.h  advconfig.cpp  advconfig.h  advconfig_impl.h  album_art.cpp  album_art.h  album_art_helpers.h  app_close_blocker.cpp  app_close_blocker.h  archive.h  audio_chunk.cpp  audio_chunk.h  audio_chunk_channel_config.cpp  cfg_var.cpp  cfg_var_legacy.cpp  cfg_var_legacy.h  chapterizer.h  commandline.h  commonObjects.cpp  completion_notify.cpp  completion_notify.h  componentversion.cpp  configStore.cpp  configStore.h  config_object.cpp  config_object_impl.h  console_manager.h  contextmenu.h  contextmenu_manager.h  core_api.h  coreversion.h  decode_postprocessor.h  dsp.cpp  dsp.h  dsp_manager.cpp  dsp_manager.h  event_logger.h  file.h  file_cached_impl.cpp  (+90 more)
sdk/foobar2000/SDK/foobar2000_SDK.xcodeproj/: project.pbxproj
sdk/foobar2000/foo_sample/: IO.cpp  dsp_sample.cpp  dsp_sample.h  foo_sample.rc  foo_sample.vcxproj  foo_sample.vcxproj.filters  foobar2000-mac-class-suffix.h  listcontrol-advanced.cpp  mainmenu.cpp  preferences.cpp  rating.cpp  resource.h  stdafx.h  ui_and_threads.cpp  ui_element.cpp
sdk/foobar2000/foo_sample/Mac/: fooSampleDSPView.xib
sdk/foobar2000/foo_sample/foo_sample.xcodeproj/: project.pbxproj
sdk/foobar2000/foobar2000_component_client/: foobar2000_component_client.vcxproj
sdk/foobar2000/foobar2000_component_client/foobar2000_component_client.xcodeproj/: project.pbxproj
sdk/foobar2000/helpers/: BumpableElem.h  CDialogResizeHelper.h  CModelessDialogMessages.h  ProfileCache.h  ThreadUtils.cpp  VolumeMap.cpp  VolumeMap.h  WindowPositionUtils.cpp  WindowPositionUtils.h  albumArtCache.h  atl-misc.h  bitreader_helper.h  cfg_obj.h  cfg_objList.h  create_directory_helper.cpp  cue_creator.cpp  cue_creator.h  cue_parser.cpp  cue_parser.h  cue_parser_embedding.cpp  cuesheet_index_list.cpp  duration_counter.h  fb2kWorkerTool.h  file_list_helper.cpp  file_list_helper.h  file_win32_wrapper.cpp  file_win32_wrapper.h  foobar2000_sdk_helpers.vcxproj  foobar2000_sdk_helpers.vcxproj.filters  input_helpers.cpp  input_helpers.h  meta_table_builder.h  mp3_utils.cpp  readWriteLock.h  readers.cpp  readers.h  readers_lite.h  rethrow.h  tag_write_callback_impl.h  text_file_loader.cpp  (+8 more)
sdk/foobar2000/helpers-mac/: CFObject.h  NSAttributedString+ppaddons.h  NSAttributedString+ppaddons.m  NSComboBox+fb2k.h  NSComboBox+fb2k.mm  NSEvent+ppstuff.h  NSEvent+ppstuff.m  NSFont+pp.h  NSFont+pp.m  NSMenu+ppaddons.h  NSMenu+ppaddons.m  NSView+embed.h  NSView+embed.m  NSView+ppsubviews.h  NSView+ppsubviews.m  fb2k-platform.h  fb2k-platform.mm  fooDecibelFormatter.h  fooTimeFormatter.h  fooWindowWithCancel.h  foobar2000-mac-helpers.h
sdk/foobar2000/helpers/foobar2000_SDK_helpers.xcodeproj/: project.pbxproj
sdk/foobar2000/shared/: Utility.cpp  crash_info.cpp  fb2kdebug.h  filedialogs.cpp  filedialogs_vista.cpp  shared-apple.mm  shared-nix.cpp  shared-nix.h  shared.h  shared.vcxproj
sdk/foobar2000/shared/shared.xcodeproj/: project.pbxproj
sdk/libPPUI/: CButtonLite.h  CEditWithButtons.h  CEnumString.h  CListAccessible.cpp  CListAccessible.h  CListControl-Cell.h  CListControl-Cells.cpp  CListControl-Cells.h  CListControl-Subst.cpp  CListControl.cpp  CListControl.h  CListControlHeaderImpl.cpp  CListControlHeaderImpl.h  CListControlOwnerData.h  CListControlSimple.h  CListControlTruncationTooltipImpl.cpp  CListControlTruncationTooltipImpl.h  CListControlWithSelection.cpp  CListControlWithSelection.h  CListControl_EditImpl.h  CListViewCtrlEx.h  CPowerRequest.cpp  Controls.cpp  DarkMode-CHyperLink.h  DarkMode.cpp  DarkMode.h  GDIUtils.h  IDataObjectUtils.cpp  ImageEncoder.cpp  InPlaceEdit.cpp  InPlaceEdit.h  InPlaceEditTable.cpp  InPlaceEditTable.h  PaintUtils.cpp  PaintUtils.h  TreeMultiSel.h  gdiplus_helpers.cpp  gdiplus_helpers.h  gesture.h  libPPUI-license.txt  (+7 more)
sdk/pfc/: CFObject.h  SmartStrStr-table.h  SmartStrStr.cpp  SmartStrStr.h  alloc.h  array.h  audio_math.cpp  audio_sample.cpp  audio_sample.h  autoref.h  avltree.h  bit_array.cpp  bit_array_impl.h  bsearch_inline.h  byte_order.h  charDownConvert.cpp  charDownConvert.h  debug.h  event_std.h  filehandle.cpp  filehandle.h  filetimetools.cpp  guid.h  iterators.h  list.h  map.h  mem_block.h  nix-objects.cpp  nix-objects.h  obj-c.mm  order_helper.h  other.cpp  other.h  pathUtils.cpp  pfc-license.txt  pfc.vcxproj  pfc.vcxproj.filters  pocket_char_ops.h  primitives.h  selftest.cpp  (+24 more)
sdk/pfc/pfc.xcodeproj/: project.pbxproj
